namespace server.domain.pet;

public static class PetConstants
{
    public const int MaxPetCount = 3;
    public const int TrainingCostGold = 100000;
    public const int TrainingRatePercent = 1;
    public const int MaxSummonsPerQuestRun = 3;
}
