classDiagram
    %% Enum 定義は docs/common/01_Enum.mmd を参照
    %% クエスト戦闘への統合（捕獲・呼出のターン解決）は docs/quest/04_クエストドメイン.mmd を参照

    namespace PetContext {
        class PlayerPet {
            <<Aggregate Root>>
            +PlayerPetId Id
            +PlayerId PlayerId
            +QuestEnemyDefinitionId EnemyDefinitionId
            +PetBonusStatus BonusStatus
            +bool IsStandby
            +DateTimeOffset CapturedAt
            +Train(playerBaseStatus: Status) void
            +Standby() void
            +ClearStandby() void
        }

        class PlayerPetId {
            <<Value Object>>
            +Guid Id
        }

        class PetBonusStatus {
            <<Value Object>>
            +int MaxHp
            +int MaxMp
            +int Strength
            +int Defense
            +int Intelligence
            +int Luck
            +int Speed
            +Add(other: PetBonusStatus) PetBonusStatus
        }

        class PetCaptureRateCalculator {
            <<Domain Service>>
            %% 成功率 = clamp(基礎率(敵Lv帯) + (プレイヤーLv - 敵Lv) * 5, 5, 95)
            %% 基礎率: 敵Lv 1-9→75 / 10-19→60 / 20-39→50 / 40-59→40 / 60-99→30 / 100-199→20 / 200-399→15 / 400-699→10 / 700+→5
            +Calculate(playerLevel: int, enemyLevel: int) int
        }

        class PetStatusResolver {
            <<Domain Service>>
            %% 敵マスタの基本ステータス + 育成加算分を合算した実効ステータスを返す
            +Resolve(pet: PlayerPet, enemyDefinition: QuestEnemyDefinition) Status
        }

        class PetConstants {
            <<Constants>>
            +int MaxPetCount = 3
            +int TrainingCostGold = 100000
            +int TrainingRatePercent = 1
            +int MaxSummonsPerQuestRun = 3
        }

        class IPetTrainingExecutor {
            <<Domain Service IF>>
            %% 育成（ゴールド消費＋ペット加算）を単一トランザクション＋プレイヤー行ロックで原子的に実行する
            %% 実装はインフラ層 DbPetTrainingExecutor（FOR UPDATE で並行育成を直列化）
            +TrainAsync(playerId: PlayerId, petId: PlayerPetId) Task~PlayerPet~
        }

        class IPlayerPetRepository {
            <<Repository IF>>
            +Task~IReadOnlyList~PlayerPet~~ GetByPlayerIdAsync(playerId: PlayerId)
            +Task~PlayerPet?~ GetByIdAsync(id: PlayerPetId)
            +Task~PlayerPet?~ GetStandbyByPlayerIdAsync(playerId: PlayerId)
            +Task AddAsync(pet: PlayerPet)
            %% スタンバイ切替は単一 UPDATE で全ペットを同期し、DB の部分一意制約で 1 体のみを保証する
            +Task~bool~ SetStandbyAsync(playerId: PlayerId, standbyPetId: PlayerPetId?, updatedAt: DateTimeOffset)
            +Task UpdateAsync(pet: PlayerPet)
            +Task DeleteAsync(id: PlayerPetId)
        }
    }

    PlayerPet *-- PlayerPetId
    PlayerPet *-- PetBonusStatus
    PlayerPet ..> PetConstants : 育成計算で参照
    PetStatusResolver ..> PlayerPet : resolve
    IPlayerPetRepository ..> PlayerPet : persists
